--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ng-blog-primary: mat-palette($mat-amber);
-$ng-blog-accent: mat-palette($mat-light-blue, A200, A100, A400);
+$ng-blog-primary: mat-palette($mat-v1-pal);
+$ng-blog-accent: mat-palette($mat-v2-pal, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $ng-blog-warn: mat-palette($mat-red);
